# PPPlayer

./: README.md  build.gradle  dependencies.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/songlei/ppplayerdemo/: BaseActivity.java  Constants.java  MainActivity.java  PlayerActivity.java  RenderActivity.java
app/src/main/java/com/songlei/ppplayerdemo/activity/: PlayerActivity.java  RenderActivity.java  SwitchDetailActivity.java  SwitchListVideoActivity.java  WindowActivity.java
app/src/main/java/com/songlei/ppplayerdemo/adapter/: SwitchListVideoAdapter.java
app/src/main/res/layout/: activity_list_video.xml  activity_main.xml  activity_player.xml  activity_render.xml  activity_switch_video_detail.xml  activity_window.xml  layout_float_video.xml  switch_list_video_item.xml  switch_video.xml
app/src/main/res/values/: strings.xml  styles.xml
basemodule/: build.gradle
basemodule/src/main/: AndroidManifest.xml
basemodule/src/main/java/com/songlei/basemodule/: CommonHandler.java
exoplayer/: build.gradle
exoplayer/src/main/: AndroidManifest.xml
exoplayer/src/main/java/com/songlei/exoplayer/: Exo2Player.java
gradle/wrapper/: gradle-wrapper.properties
obssplayer/: CMakeLists.txt  build.gradle
obssplayer/src/main/: AndroidManifest.xml
obssplayer/src/main/cpp/: native-lib.cpp
obssplayer/src/main/cpp/core/: audio_out.c  audio_out.h  avout_layer.h  codec_layer.h  common.h  memory_manager.c  memory_manager.h  memory_manager_old.c  os.h  playercore.c  playercore.h  playercore_base.h  source_layer.h  video_out.c  video_out.h
obssplayer/src/main/cpp/core/android/: IRenderingEngine.hpp  RenderingEnine1.cpp  RenderingEnine2.cpp  cpu-features.c  cpu-features.h  data_type.h  droid_audio.cpp  droid_audio_openSL.cpp  droid_video.cpp  mc.cpp  mc.h  os.cpp  playercore_platform.h
obssplayer/src/main/cpp/core/android/shaders/: Simple.frag  Simple.vert
obssplayer/src/main/cpp/modules/common/FFMPEG_lib/include/libavutil/: common.h  pixfmt.h
obssplayer/src/main/cpp/modules/common/FFMPEG_lib/lib/win32/x86/: avcodec.lib  avformat.lib  avutil.lib
obssplayer/src/main/cpp/modules/common/httpclient/: http_client.c  http_client.h  ngb.c  ngb.h
obssplayer/src/main/cpp/modules/common/jsonparser/: json_reader.cpp  json_value.cpp
obssplayer/src/main/cpp/modules/common/jsonparser/json/: reader.h
obssplayer/src/main/cpp/modules/decoder/: decoders.h
obssplayer/src/main/cpp/modules/decoder/AAC/: aacplusplus.c  fdkaacdec.c
obssplayer/src/main/cpp/modules/decoder/AAC/libFdk_aac/include/: FDK_audio.h  aacdecoder_lib.h  machine_type.h
obssplayer/src/main/cpp/modules/decoder/AAC/prebuild/win32/: ReadMe.txt  libaacpp.sln  libaacpp.vcproj  libaacpp.vcxproj  libaacpp.vcxproj.filters
obssplayer/src/main/cpp/modules/decoder/FFMPEG/: ffmpegDecoder.c
obssplayer/src/main/cpp/modules/decoder/H265/: HEVC.c  rmComType.h  rmH265.h
obssplayer/src/main/cpp/modules/decoder/nb/: amrnb.c
obssplayer/src/main/cpp/modules/decoder/nb/libamrnb/: interf_dec.c  interf_dec.h  interf_enc.c  interf_enc.h  interf_rom.h  rom_enc.h  sp_dec.c  sp_enc.c  typedef.h
obssplayer/src/main/cpp/modules/decoder/wb/: armwb.c
obssplayer/src/main/cpp/modules/decoder/wb/libamrwb/: dec.h  dec_acelp.c  dec_acelp.h  dec_dtx.c  dec_dtx.h  dec_gain.c  dec_gain.h  dec_if.c  dec_if.h  dec_lpc.c  dec_lpc.h  dec_main.c  dec_main.h  dec_rom.c  dec_util.c  dec_util.h  if_rom.c  output.c  output.h  typedef.h
obssplayer/src/main/cpp/modules/demux/: demuxs.h
obssplayer/src/main/cpp/modules/demux/demux_FFMPEG/: demux_FFMPEG.c
obssplayer/src/main/cpp/modules/demux/demux_rtmp/: fa_flv2es.c  fa_flv2es.h  rmH265InfoCheck.c  rtmp_demux.cpp  rtmp_demux.h
obssplayer/src/main/cpp/modules/demux/demux_rtmp/rtmp/include/: rtmp.h
obssplayer/src/main/cpp/modules/demux/demux_srs_rtmp/: srs_kernel_codec.h  srs_librtmp.cpp  srs_librtmp.h  srs_rtmp_demux.cpp
obssplayer/src/main/java/com/songlei/obssplayer/: BasePlayer.java  ObssConstants.java  OnObssListener.java  PlayException.java
obssplayer/src/main/java/nativeInterface/: playerView.java
obssplayer/src/main/res/values/: strings.xml
slplayer/: CMakeLists.txt  build.gradle
slplayer/src/main/: AndroidManifest.xml
slplayer/src/main/cpp/: Player.cpp
slplayer/src/main/cpp/ffmpeg/: CallJava.cpp  CallJava.h  FFmpegManager.cpp  FFmpegManager.h  PlayStatus.cpp  PlayStatus.h  SLAudio.cpp  SLAudio.h  SLQueue.cpp  SLQueue.h  SLVideo.cpp  SLVideo.h
slplayer/src/main/cpp/gles/: BaseSurface.cpp  BaseSurface.h  EGLHelper.cpp  EGLHelper.h  EGLThread.cpp  EGLThread.h  MatrixUtil.h  ShaderUtil.h
slplayer/src/main/cpp/utils/: AndroidLog.h  TimeUtil.h
slplayer/src/main/java/com/songlei/slplayer/bean/: PitchBean.java  SpeedBean.java
slplayer/src/main/java/com/songlei/slplayer/egl/: PlayerRender.java  ShaderUtil.java
slplayer/src/main/java/com/songlei/slplayer/listener/: IPlayerCallBack.java  OnCompleteListener.java  OnErrorListener.java  OnPrepareListener.java  OnTimeInfoListener.java
slplayer/src/main/java/com/songlei/slplayer/player/: Player.java  VideoPlayer.java
slplayer/src/main/java/com/songlei/slplayer/util/: MediaDecodeUtil.java
slplayer/src/main/java/com/songlei/slplayer/view/: PlayerGLSurfaceView.java  PlayerView.java  VideoPlayerView.java
slplayer/src/main/res/values/: strings.xml
xplayer/: build.gradle
xplayer/src/main/: AndroidManifest.xml
xplayer/src/main/java/com/songlei/xplayer/: PlayerConstants.java  PlayerManager.java
xplayer/src/main/java/nativeInterface/: playerView.java
xplayer/src/main/res/anim/: dialog_photo_in.xml  dialog_photo_out.xml  slide_in_from_right.xml
xplayer/src/main/res/drawable/: bg_go_on_play.xml  selector_text_switch_mode.xml  selector_wifi_tip.xml  video_progress.xml  video_volume_progress_horizontal_bg.xml
xplayer/src/main/res/layout/: dialog_switch_mode.xml  dialog_switch_mode_land.xml  dialog_video_volume.xml  layout_player_base.xml  layout_player_render.xml  layout_video_cover.xml
xplayer/src/main/res/values/: dimens.xml  id.xml  style.xml
(+91 files in other folders)
